--- a/src/main.scss
+++ b/src/main.scss
@@ -114,31 +114,35 @@ p {
 ////////////////////////
 
 .sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: absolute;
     visibility: hidden;
     width: 200px;
     height: 100%;
     background-color: $color2;
     color: $color5;
-    padding: 1em;
-    .sidebar-item {
+    .sidebar-items {
+        padding: .8em;
+    }
+    .item {
         display: flex;
         align-items: center;
-        gap: 0.5em;
+        gap: .5em;
+        padding: .5em;
+        margin-bottom: .5em;
         h4 {
             margin: 0;
             overflow-x: auto;
+            scrollbar-color: $color3;
         }
     }
-    .sidebar-item:hover {
+    .item.selected {
+        background-color: $color3;
+    }
+    .item:hover {
         cursor: pointer;
-    }
-    .icons-set i {
-        display: none;
-    }
-    .icons-set i.in-use {
-        display: inline-block;
-        font-size: 1.3em;
     }
 }
 
@@ -150,6 +154,26 @@ p {
 @keyframes show-sidebar {
     from {opacity: 0;}
     to {opacity: 1; transform: translateX(80px)}
+}
+
+////////////////////////
+//   SIDEBAR ACTIONS  //
+////////////////////////
+
+.sidebar-actions {
+   display: flex;
+   justify-content: flex-start;
+   gap: 1em;
+   padding: .6em .3em .6em;
+   border-top: 3px $color3 solid;
+   .action {
+       font-size: 1.1em;
+       color: $color3;
+   }
+   .action:hover {
+       color: $color5;
+       cursor: pointer;
+   }
 }
 
 ////////////////////////
